# api.epi.today

./: Cargo.toml  Dockerfile  api.epi.today.drawio  openapi.yaml  readme.md
.github/workflows/: docker-hub-tags.yml  docker-hub.yml  docker.yml  rust.yml
doc/: doc.html  v1-diagram.drawio  v1-spec.yaml
src/: intra_autologin.rs  intra_client.rs  main.rs  v1.rs
src/date/: mod.rs
src/intra/: autologin.rs  check.rs  client.rs  format.rs  mod.rs
src/v1/: custom_planning.rs  data.rs  health.rs  mod.rs  planning.rs  user.rs
src/v1/custom_planning/: day.rs  event_register.rs  event_unregister.rs  list.rs  mod.rs
src/v1/health/: api.rs  intra.rs  mod.rs
src/v1/planning/: day.rs  event_register.rs  event_unregister.rs  mod.rs  rdv.rs  token.rs
src/v1/user/: info.rs  mod.rs
