[package]
name = "api-epi-today"
version = "1.0.0"
authors = ["Philippe Loctaux <p@philippeloctaux.com>"]
edition = "2018"
repository = "https://github.com/x4m3/api.epi.today"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.105"
serde_json = "1.0.48"
reqwest = { version = "0.10.4", features = ["json"] }
regex = "1.3.5"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
chrono = "0.4.11"
actix-web-prom = "0.2"